src/test/contracts/top_level_patterns/negative/cameligo/constr_let_in.mligo
type foo = A | B

let test =
  let B = B in
  ()
